--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -1,5 +1,59 @@
 @CHARSET "UTF-8";
 
+body {
+  padding-top: 60px;
+  padding-bottom: 40px;
+}
+
+.main-content {
+	min-height: 300px;
+}
+
+
+/* Footer
+-------------------------------------------------- */
+
+.footer {
+  text-align: center;
+  padding: 30px 0;
+  margin-top: 70px;
+  border-top: 1px solid #e5e5e5;
+  background-color: #f5f5f5;
+}
+.footer p {
+  margin-bottom: 0;
+  color: #777;
+}
+.footer-links {
+  margin: 10px 0;
+}
+.footer-links li {
+  display: inline;
+  padding: 0 2px;
+}
+.footer-links li:first-child {
+  padding-left: 0;
+}
+
+/* Unfloat the back to top link in footer */
+.footer {
+  margin-left: -20px;
+  margin-right: -20px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.footer p {
+  margin-bottom: 9px;
+}
+
+ /* Tighten up footer */
+ .footer {
+   padding-top: 20px;
+   padding-bottom: 20px;
+ }
+
+
+/*
 html, body { 
 	height: 100%;
 	font-family: sans-serif;
@@ -9,24 +63,6 @@ html, body {
 body {
 	margin: 0px;
 	background: red;
-}
-table#masterTable {
-	background: white;
-	width: 100%;
-	height: 100%;
-}
-
-table#masterTable > tbody > tr > th#masterHeader {
-	background: #66CCFF;
-	height: 100px;
-	vertical-align: middle;
-	border-bottom: 1px solid #100f35;
-}
-
-table#masterTable > tbody > tr > td#masterFooter {
-	border-top: 1px solid #100f35;
-	background: #66CCFF;
-	text-align: right;
 }
 
 td#masterContentMenu {
@@ -57,10 +93,6 @@ div.menuDiv1 a, div.menuDiv2 a {
 	display: block;
 	padding-top: 2px;
 	padding-bottom: 2px;
-}
-
-table#masterTable > tbody > tr#masterContent {
-	height: 100%;
 }
 
 td#masterContentPlaceholder {
@@ -108,3 +140,4 @@ table.projectTable th {
 	background: #66CCFF;
 	text-align: right;	
 }
+*/
